--- a/blog-single.html
+++ b/blog-single.html
@@ -50,7 +50,7 @@
 <body>
 
 	<!-- Preloader -->
-	<div class="preloader">
+	<div class="preloader new">
 		<div class="loader">
 			<div class="loader-outter"></div>
 			<div class="loader-inner"></div>
